--- a/ui/src/components/Button/Button.css
+++ b/ui/src/components/Button/Button.css
@@ -2,6 +2,7 @@
 @import "../../../styles/typography.css";
 @import "../../../styles/space.css";
 @import "../../../styles/fonts.css";
+@import "../../../styles/icons.css";
 
 .btn {
   border-radius: 4px;
