Add static file serving and new theme
Implemented static file serving in the Deno API server with MIME type detection. Added VideoFullBleed component and snif.css theme, updated theme styles, and allowed snif.co domain in Claude settings.

--- a/ui/styles/theme.css
+++ b/ui/styles/theme.css
@@ -6,10 +6,11 @@
  */
 
 /* Active Theme - Change this line to switch themes */
-/*@import "./themes/default.css";*/
+@import "./themes/snif.css";
 
 /* Available Themes */
- @import "./themes/blank.css";
+/* @import "./themes/default.css"; */
+/* @import "./themes/blank.css"; */
 
 /* Add custom themes here */
 /* @import "./themes/your-brand.css"; */
